# noob-gradio

./: README.md  pyproject.toml
src/noob_gradio/: __init__.py  client.py
