[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noob_gradio"
version = "1.0.0"
description = "A lightweight async alternative to gradio_client without heavy dependencies."
authors = [{ name = "Noob" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.2"
]
keywords = ["gradio", "async", "client", "huggingface", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Client"
]

[project.urls]
Homepage = "https://github.com/Noob-Lol/noob-gradio"
Source = "https://github.com/Noob-Lol/noob-gradio"
Issues = "https://github.com/Noob-Lol/noob-gradio/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
